[package]
name = "robinsr"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prost = "0.12"
base64 = "0.22"

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"
